public/assets/css/style.css
/* ... */
div.searchform form,
div.banner-search form {
  width: 100%;
}

.searchform select {
  border-style: none;
  border-radius: 0;
  padding: 6px;
  padding-left: 0.6em;
  width: 100%;
  background-color: #e5e3e1;
  font-size: 16px;
  -webkit-border-radius: 0;  /* Safari 3-4, iOS 1-3.2, Android 1.6- */    
  -moz-border-radius: 0;  /* Firefox 1-3.6 */     
  border-radius: 0;  /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
}

.searchform input {
  width: 100%;
  border-style: none;
  padding: 20px 15px;
  font-size: 16px;
}

.searchform button {
  background-color: #8b2332;
  border-bottom-style: none;
  border-top-style: none;
  border-right-style: none;
  border-left-style: none;
  padding: 9px;
  width: 100%;
  color: #e5e3e1;
  font-size: 18px;
  font-family: 'Montserrat', 'Poppins', 'Raleway', sans-serif;
  overflow: hidden;
}

.searchform button i {
  color: #e5e3e1;
  font-size: 20px;
  padding-bottom:40px;
}

.searchform span a {
  position: relative;
  float: right;
  top: 10px;
  right: 0;
  color: white;
  text-decoration: underline;
}

div.searchform .search-box {
  width: 60%;
}

form#advanced-search .form-inline {
  margin-top: 20px;
}

#advanced-search #advanced-search-query-row-1 .form-group:first-child {
  display: none;
}

div.advanced-search-form-controls {
  position: relative;
  top: 40px;
}

#advanced-search-submit {
  position: relative;
  top: 40px;
}

div.page-form {
  padding: 20px;
}

div.page-form button {
  height: 30px;
}

div.page-form .form-group {
  margin-right: 10px;
}

div.sidebar-search #search-options {
  width: 20%;
}

div.sidebar-search .search-box {
  width: 60%;
}

div.sidebar-search .search-submit {
  width: 20%;
}

div.sidebar-search .search-element {
  height: 30px;
}

.welcomeBox {
  text-align: center;
}

.welcomeBox hr {
  margin: 32px 0 !important;
}

.welcomeBox .title1 > span {
  color: #8b2332;
}

.welcomeBox .title1 {
  font-size: 43px;
  font-family: 'Oswald';
  font-weight: 400;
  color: #715657;
  text-transform: uppercase;
  margin-top: -5px;
  margin-bottom: 1px;
}

.welcomeBox .description {
  font: 1.1em 'Open Sans', "Helvetica Neue", Helvetica, sans-serif;
  line-height: 24px;
  color: #797878;
  text-align: left;
}

#home-search .form-group {
  width: 20%;
}

#home-search .search-box {
  width: 60%;
}

div#sidebar {
  padding: 0 15px;
}

div.sidebar-section {
  margin-bottom: 40px;
}

div.paginator {
  margin: 35px 0 0 30px;
}

div.paginator a {
  text-decoration: none;
  color: inherit;
  line-height: 30px;
}

div.paginator > span {
  color: #555351;
}

div.paginator > span > strong {
  color: #181818;
}

div.paginator-pages a {
  color: inherit;
  text-decoration: none;
}

div.paginator-pages a + a {
  margin-left: 10px;
}

/* Begin facet section */
div.home-facets {
  margin: 2.5em 0.5em;
}

div.facets .facet-count > div {
  float: right;
  padding-right: 7px;
}

div.facets .list-group-item {
  padding: 0.4rem 1.25rem;
  border: none;
}

div.facets .panel {
  margin-bottom: 0.5em;
  margin-top: -0.5em;
  border-top-style:none;
  max-height: 327px;
  overflow-y: scroll;
  padding: 10px 1px;
}

div.facet-panel li > a {
  position: relative;
  top: 10px;
  text-decoration:underline;
}

div.facets .panel span {
  display: inline-block;
}

div.facets .panel span.facet-name {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

div.facets ul {
  font-size: 14px;
  list-style: none;
}

div.facets .static-facets {
  overflow-y: hidden;
  max-height: 350px;
}

.facet-caret {
  color: #8b2332;
}

.facet-name,
.facet-count {
  padding-top: 5px;
}

.facet-thumbnail > img {
  width: 27px;
  height: 25px;
  margin-left: 10%;
}

.facet-name {
  width: 71%;
}

.facet-name a {
  text-decoration: none;
  color: #222;
  line-height: 15px;
}

.facet-count {
  color: #757371;
  float: right;
}

.fixed-facets .facet-count {
  margin-top: 5px;
}

button.accordion > h4 {
  margin: 0;
  float: left;
  font-size: 16px !important;
}

button.accordion > i {
  float: right;
}

button.accordion,
div.panel {
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-color: #c5c3c1;
  border-radius: 2px;
}

button.accordion {
  font-size: 18px;
  margin-bottom: 0.5em;
  background-color: #e5e3e1;
}
/* End facet section */

div.facet-breadcrumbs {
  margin: 30px auto 0 auto;
  width: 80%;
}

div.facet-breadcrumbs span {
  border: none;
  background: #e5e3e1;
  padding: 6px 12px;
  margin: 0 auto 5px auto;
  color: #222;
  white-space: normal;
  display: inline-block;
}

div.facet-breadcrumbs span:not(:first-child) {
  margin-left: 10px;
}

div#viewer-section {
  /*height: 437px;*/
  height: 100%;
  background: #e5e3e1;
  padding: 20px 0px;
  text-align: center;
}

div.viewer-wrapper {
  margin: 0 auto;
  width: 75%;
}

div.viewer-wrapper div {
  padding: 0;
}

div#viewer-section.object-view-error {
  padding: 50px 0;
}

div#viewer-section.object-view-error a {
  color: blue;
}

div#pdf-viewer > iframe {
  width: 90%;
  height: 800px;
}

#openseadragon1 {
  width: 60%;
  height: 40vw;
}

/* Begin collection grid section */
div#home-collections {
  margin: 0;
}

div#home-collections div.collection-thumb {
  margin-bottom: 45px;
}

div#home-collections > h4 {
    font-size: 1em;
}

div#collections .item-thumb {
  /*max-height: 200px;*/
  max-width: 200px;
  /* align-content: center; */
  margin: 20px auto;
}

div#collections div.collection-thumb {
  margin-bottom: 15px;
}

div#collections {
  margin: 50px 0 0 15px;
}

div#collections dl.item {
/*    max-width: 200px;
    max-height: 200px;*/
}

div#collections dl.item > dt {
  border-bottom-style: solid;
  border-bottom-color: #e5e3e1;
}

div#collections .row:not(:first-child) {
  margin-top: 4vw;
  border-top-style: solid;
  border-top-width: 1px;
  border-top-color: #e5e3e1;
}

div#collections .item-thumb {
  /*max-height: 200px;*/
  max-width: 200px;
  /* align-content: center; */
  margin: 20px auto;
}
/* ... */

